--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "dependencies": {
+    "@types/react": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-eslint": "^10.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-typescript-sort-keys": "^1.6.0",
     "next": "^10.2.0",
     "nps": "^5.9.12",
     "prettier": "^1.19.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.2.4"
   },
-  "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "start": "nps"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.4",
-    "typescript": "^4.2.4"
   }
 }
